+ Issue 219:	Active player's groups should be visible

--- a/modules/webserver/src/main/webapp/content/playground/game.css
+++ b/modules/webserver/src/main/webapp/content/playground/game.css
@@ -487,7 +487,7 @@
     white-space: nowrap;
 }
 
-#boardLegend table td, #participated table td {
+#boardLegend table td {
     white-space: nowrap;
 }
 
@@ -542,6 +542,7 @@
     border-spacing: 5px;
 }
 
-#subscriptionView table td, #subscriptionDialog table td, #subscriptionDetails table td {
+#subscriptionView table td, #subscriptionDialog table td, #subscriptionDetails table td, #participated table td {
+    white-space: nowrap;
     vertical-align: top;
 }
